# Compact-Language-Models-via-Pruning-and-Knowledge-Distillation

./: README.md  archoptim_example.py  dev.ipynb  dev2.ipynb  hooks.py  importances.py  models.py  pruners.py  pyproject.toml  script.py  test_importances.py  tokenizers.py  utils.py
dataset/: calibration.txt
model/: model_params.json
